<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    //

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgViewProductCardImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

    </ImageView>

    <TextView
        android:id="@+id/drink_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="Placeholder text"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProductCardImage" />

    <TextView
        android:id="@+id/textViewChooseSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TextViewChooseSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/drink_name" />

    <RadioGroup
        android:id="@+id/radioGroupSizes"
        android:layout_width="413dp"
        android:layout_height="161dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseSize"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioBtnSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewSizeSmall"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioBtnMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewSizeMedium"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/radioBtnLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewSizeLarge"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txtViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProductPriceTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPriceLabel"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/txtViewPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Price:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSizes" />


</androidx.constraintlayout.widget.ConstraintLayout>